feat: add crud vehicles and update booking include the vehicle
